<resources>

    <!-- ================================================
        General Strings
     =================================================-->
    <string name="app_name">Rambler</string>

    <!-- ================================================
        Activity Name Strings
     =================================================-->

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- ================================================
        Navigation Bar Strings
     =================================================-->
    <string name="nav_home">Home</string>
    <string name="nav_news">News</string>
    <string name="nav_campus_life">Campus Life</string>
    <string name="nav_commentary">Commentary</string>
    <string name="nav_arts_entertainment">Arts &amp; Entertainment</string>
    <string name="nav_sports_health">Sports &amp; Health</string>
    <string name="nav_campus_conversations">Campus Conversations</string>
    <string name="nav_advisers_corner">Adviser\'s Corner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ================================================
        Strings related to Settings
     =================================================-->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_allow_notifications">Allow notifications</string>

    <string name="pref_title_subscribe">Subscribe to a Category</string>
    <string-array name="pref_list_categories">
        <item>News</item>
        <item>Campus Life</item>
        <item>Commentary</item>
        <item>Arts &amp; Entertainment</item>
        <item>Sports &amp; Health</item>
        <item>Campus Conversations</item>
        <item>Adviser\'s Corner</item>
    </string-array>
    <string-array name="pref_list_categories_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="not_implemented">Not  Implemented</string>
</resources>
