<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_campus_life"
            android:title="@string/nav_campus_life" />
        <item
            android:id="@+id/nav_commentary"
            android:title="@string/nav_commentary" />
        <item
            android:id="@+id/nav_arts_entertainment"
            android:title="@string/nav_arts_entertainment" />
        <item
            android:id="@+id/nav_sports_health"
            android:title="@string/nav_sports_health" />
        <item
            android:id="@+id/nav_campus_conversations"
            android:title="@string/nav_campus_conversations" />
        <item
            android:id="@+id/nav_advisers_corner"
            android:title="@string/nav_advisers_corner" />
    </group>

</menu>
